--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,4 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
+/* Reset Styles */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -47,8 +43,12 @@ table {
 	border-spacing: 0;
 }
 
-
 /* Custom Global Styles */
+
+button {
+	outline: none;
+	border: none;
+}
 
 a {
   text-decoration: none;
@@ -59,28 +59,7 @@ input, select {
 }
 
 body {
-  font-family: 'Nunito Sans', sans-serif;	
-	background-color: #ededed;
+	font-family: 'Muli', sans-serif;
+	background-color: #f2f2f2;
+	color: #484848;
 }
-
-/* Prevent body scrolling when a ReactModal is open */
-.ReactModal__Body--open {
-	overflow: hidden;
-}
-
-/* 
-
-purple
-color: #8378f4
-
-green
-color: #59d9a4
-
-red
-color: #f478b8
-
-blue
-color: #59d4d9
-
-
-*/
