--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -30,6 +30,7 @@ body {
 	padding: 0;
 	width: 100%;
 	height: 100%;
+	line-height: 1;
 	font-family: 'Muli', sans-serif;
 	background-color: #f2f2f2;
 	color: #484848;
