--- a/src/assets/react-datepicker-override.css
+++ b/src/assets/react-datepicker-override.css
@@ -74,7 +74,7 @@
   font-size: 0.8rem;
   background-color: #fff;
   color: #000;
-  border: 1px solid #333;
+  border: 1px solid #ddd;
   border-radius: 2px;
   display: inline-block;
   position: relative;
